# SudokuSolverCpp

./: CMakeLists.txt  README.md
SudokuSolver/: CMakeLists.txt  SudokuBacktrack.cpp  SudokuBacktrack.h  SudokuBoard.cpp  SudokuBoard.h  SudokuCell.cpp  SudokuCell.h  SudokuFileReader.cpp  SudokuFileReader.h  SudokuSolver.cpp  SudokuSolver.h  SudokuValue.cpp  SudokuValue.h  SudokuValueEmoji.cpp  SudokuValueEmoji.h  SudokuValueEmojiRange.cpp  SudokuValueEmojiRange.h  SudokuValueInt.cpp  SudokuValueInt.h  SudokuValueIntRange.cpp  SudokuValueIntRange.h  SudokuValueRange.h  sudoku_test.txt  sudoku_test_bad.txt  sudoku_test_hard.txt  sudoku_test_hardest.txt
SudokuSolver/boards/: sudoku_test_12.txt  sudoku_test_12_alpha.txt  sudoku_test_12_alpha_header_order.txt  sudoku_test_bad.txt  sudoku_test_emoji.txt
